src/test/resources/valid_programs/return_stms_simple.notc
void main() {
}

double d() {
    return 44.9;
}

bool b() {
    return false;
}

void v() {
    return;
}

string s() {
    return "sscvklh";
}
