src/test/resources/syntax_errors/decl_stm_in_while_exp.notc
void main() {
    while (bool b = false) {
    }
    return;
}
